# async-os-pipe

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic.rs  stdio.rs
src/: lib.rs
src/sys/: unix.rs  windows.rs
tests/: basic.rs
