[package]
name = "async-os-pipe"
description = "Cross platform implementation of a bidirectional async pipe"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jprendes/async-os-pipe"
homepage = "https://github.com/jprendes/async-os-pipe"

[dependencies]
libc = "0.2"
tokio = { version = "1", features = ["net", "io-util"] }
bytes = "1.10"

[dev-dependencies]
stdio-utils = "0.1.2"
tokio = { version = "1", features = ["full"] }
